--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <i>Untuk memperjelas Author membuat Cuplikan Video-nya di bawah ini. Dan jangan lupa <strong>Subscribe Channel Youtube-nya</strong></i>
 </p>
 <div class="embed">
-	<iframe src="https://www.youtube.com/watch?v=AkIlBy_BElU&list=PL_am9ZRZ7CWh5UngzDw1rwyd-4haNy2Op&index=1" width="100%" height=""></iframe>
+	<iframe src="https://www.youtube.com/watch?v=AkIlBy_BElU&list=PL_am9ZRZ7CWh5UngzDw1rwyd-4haNy2Op&index=1" width="720px" height="100%"></iframe>
 </div>
 
 </div></div>
