--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <i>Untuk memperjelas Author membuat Cuplikan Video-nya di bawah ini. Dan jangan lupa <strong>Subscribe Channel Youtube-nya</strong></i>
 </p>
 <div class="embed">
-	<iframe width="640" height="100%" src="https://www.youtube.com/embed/videoseries?list=PL_am9ZRZ7CWh5UngzDw1rwyd-4haNy2Op" frameborder="0" allowfullscreen></iframe>
+	<iframe width="640px" height="100%" src="https://www.youtube.com/embed/videoseries?list=PL_am9ZRZ7CWh5UngzDw1rwyd-4haNy2Op" frameborder="0" allowfullscreen></iframe>
 </div>
 
 </div></div>
