--- a/index.html
+++ b/index.html
@@ -1,30 +1,22 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="content-type" content="text/html; IE-edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="" />
-	<meta name="author" content="" />
-	<title>TVd's | Beranda</title>
+	<meta name="description" content="Developer IT and Solution IT for Office" />
+	<meta name="author" content="Yudha Prasetya Usman ST>
+
+	<title>CITS | Beranda</title>
 	<link rel="stylesheet" href="css/style.css">
 	<script type="text/javascript" src="js/javascript.js">
 
 	</script>
 </head>
 <body>
-	<div class="abu">
-	<div class="artikel">
-		<h1>Yudha Prasetya Usman</h1>
-<h2>2 Cara Mengatasi Hamparan Layar Terdeteksi Pada Android Marshmallow ke Atas</h2>
-<p>Bagi kamu yang kesulitan mengatasi Hamparan Layar Terdeteksi pada Android Marhsmallow [6.0], pada kesempatan saat ini Author akan memberikan sedikit informasi dan tutorial untuk mengatasi masalah Hamparan Layar yang Terdeteksi pada Android Marshmallow [6.0].<br><br> Pada Android Marshmallow [6.0] Google telah menambahkan keamanan berlapis untuk sistem operasi Android-nya agar tidak mudah di serang oleh hacker, baik itu aplikasi yang kita install dari Google Playstore maupun Apk yang kita install manual dari tempat penyimpanan.<br><br> Singkatnya, setelah kita membuka aplikasi yang sudah terpasang pada Android Marshmallow [6.0], maka aplikasi tersebut akan meminta izin untuk mengakses ke dalam sistem seperti izin menggunakan kamera, microphone, tempat penyimpanan dan lain-lain.<br><br>Namun ada beberapa aplikasi yang meminta izin untuk menimpa izin diatas izin lain dan mengambang [terhampar] di lapisan depan layar Android. Seperti sebuah widged cleaner, booster, floating app dan lain sebagainya.<br><br>Ketika melihat aplikasi yang sudah dipasang memiliki widget ataupun floating maka ketika kamu mengintall aplikasi yang meminta izin tidak bisa dan muncul pesan Hamparan Layar Terdeteksi [Screen Overlay Detection] maka dengan mudah kamu harus mematikan layanan dari aplikasi yang mengambang dan coba untuk memberikan izin pada aplikasi yang baru.<br><br><i>Lalu bagaimana kalau ternyata setelah mematikan layanan aplikasi yang mengambang juga tidak bisa memberikan akses izin pada aplikasi yang baru???</i><br><br><strong>Ini adalah cara kedua kalau cara pertama tidak berhasil</strong><br><br>1. Menuju ke layar utama [home]<br>2. Buka aplikasi yang terakhir kali di buka [recent app]<br>3. Bersihkan semua aplikasi <br>4. Masuk ke Pengaturan [setting]<br>5. Buka Apps <br>6. Cari Aplikasi yang ingin diberikan izin <br>7. Berikan semua izin <br><strong>Aplikasi tersebut sudah bisa diakses dan tidak muncul pemberitahuan lagi.</strong>
-<br><br>
-<i>Untuk memperjelas Author membuat Cuplikan Video-nya di bawah ini. Dan jangan lupa <strong>Subscribe Channel Youtube-nya</strong></i>
-</p>
-<div class="embed">
-	<iframe width="640px" height="480px" src="https://www.youtube.com/embed/videoseries?list=PL_am9ZRZ7CWh5UngzDw1rwyd-4haNy2Op" frameborder="0" allowfullscreen></iframe>
-</div>
-
-</div></div>
-</body>
+	<h1>Cloud IT Solution</h1>
+	<p>
+		Selamat Datang di Web Resmi dari
+	</p>
+	/body>
 </html>
