--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="content-type" content="text/html; IE-edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="Developer IT and Solution IT for Office" />
-	<meta name="author" content="Yudha Prasetya Usman ST>
+	<meta name="author" content="Yudha Prasetya Usman ST"/>
 
 	<title>CITS | Beranda</title>
 	<link rel="stylesheet" href="css/style.css">
@@ -14,9 +14,18 @@
 	</script>
 </head>
 <body>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/help">Help</a></li>
+        <li><a href="/about">About</a></li>
+    </ul>
+
 	<h1>Cloud IT Solution</h1>
 	<p>
 		Selamat Datang di Web Resmi dari
 	</p>
-	/body>
+
+    <h3>Sponsored By :</h3>
+    <a href="majimecenter.com/index.html">Majime Training Center</a>
+</body>
 </html>
