--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		Selamat Datang di Web Resmi dari
 	</p>
 
+    <div>
+
+    </div>
     <h3>Sponsored By :</h3>
     <a href="majimecenter.com/index.html">Majime Training Center</a>
 </body>
