--- a/majimecenter.com/index.html
+++ b/majimecenter.com/index.html
@@ -29,5 +29,26 @@
         <i class="fas fa-phone"></i>
     </div>
 
+    <div class="center">
+        <h1>Program Pemagangan</h1>
+        <img style="background-color: aqua;" src="" width="300" height="300" />
+        <img style="background-color: aqua;" src="" width="300" height="300" />
+        <img style="background-color: aqua;" src="" width="300" height="300" />
+        <img style="background-color: aqua;" src="" width="300" height="300" />
+    </div>
+
+    <div class="center">
+        <img style="background-color: greenyellow; width: 80%; height: 300px; border: none;" src="" />
+        <img style="background-color: green; width: 100%; height: 100px; border: none;" src="" />
+
+    </div>
+
+    <div style="margin: 10px" class="center">
+        <img style="background-color: greenyellow; width: 33%; height: 300px; min-width: 300px;" src="" />
+        <img style="background-color: greenyellow; width: 33%; height: 300px; min-width: 300px;" src="" />
+        <img style="background-color: greenyellow; width: 33%; height: 300px; min-width: 300px;" src="" />
+
+    </div>
+
 </body>
 </html>
