--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 
     <h3>Sponsored By :</h3>
     <a href="majimecenter.com/index.html">Majime Training Center</a>
+		<button><a href="tokodewi.com/index.php">Toko Dewi</a></button>
 </body>
 </html>
