--- a/majimecenter.com/index.html
+++ b/majimecenter.com/index.html
@@ -50,5 +50,24 @@
 
     </div>
 
+    <div class="header_contact">
+        <span>Daftar</span>
+        <i class="fas fa-user-plus"></i>
+        <span>|</span>
+        <span>Masuk</span>
+        <i class="fas fa-user"></i>
+        <span>|</span>
+
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+        <span>|</span>
+        <span>Senin - Sabtu 8.00 - 18.00</span>
+        <i class="far fa-clock"></i>
+        <span>Jalan Ar Hakim No. 193 BC Medan</span>
+        <i class="fas fa-location-arrow"></i>
+        <span>0852-6275-7744 / 0813-6037-3677</span>
+        <i class="fas fa-phone"></i>
+    </div>
+
 </body>
 </html>
