--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     </div>
     <h3>Sponsored By :</h3>
     <a href="majimecenter.com/index.html">Majime Training Center</a>
-		<button><a href="tokodewi.com/index.php">Toko Dewi</a></button>
+		<button><a href="tokodewi.com/">Toko Dewi</a></button>
 </body>
 </html>
