--- a/tokodewi.com/index.html
+++ b/tokodewi.com/index.html
@@ -1,12 +1,81 @@
-﻿<!DOCTYPE html>
-
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8" />
-    <title>Toko Dewi</title>
+  <meta charset="utf-8" />
+  <title>Toko Dewi</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="/css/master.css">
 </head>
 <body>
-    <h1>Toko Dewi</h1>
-    
+  <div class="w3-top w3-white">
+
+    <div class="w3-container w3-right">
+      <a href="/">Mitra Tokodewi</a>
+      <a href="/">Mulai Berjualan</a>
+      <a href="/">Promo</a>
+      <a href="/">Pusat Bantuan</a>
+    </div>
+    <hr>
+    <div class="w3-container w3-center">
+
+      <a href="/">Tokodewi.com</a>
+      <a href="/">Kategori</a>
+      <input class="w3-round-large w3-border" type="text" placeholder="Cari Produk" name="" value="">
+      <button type="submit" name="search"><i class="fas fa-search"></i></button>
+      <a href="/"><i class="fas fa-shopping-cart"></i></a>
+      <a href="/"><i class="far fa-bell"></i></a>
+      <a href="/"><i class="far fa-envelope"></i></a>
+      <a href="/"><i class="far fa-user"></i>Pemilik Toko</a>
+    </div>
+    <hr>
+  </div>
+  <br><br><br><br><br><br>
+
+  <div class="w3-row w3-container">
+    <div class="w3-border w3-round-large w3-quarter">
+      <div class="">
+          <table>
+            <tr>
+              <td>
+                <img class="w3-round" src="/img/bg-web-dewi.png" width="50px" height="50px" alt="Image Profile">
+              </td>
+              <td>Profile Pemilik</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td>
+                <img class="w3-round" src="/img/bg-web-dewi.png" width="50px" height="50px" alt="Image Profile">
+              </td>
+              <td>Saldo</td>
+              <td>Rp 0</td>
+            </tr>
+          </table>
+      </div>
+
+      <div class="w3-bar-block w3-text-green">
+        KOTAKMASUK
+        <a href="#" class="w3-bar-item w3-button">Chat</a>
+        <a href="#" class="w3-bar-item w3-button">Diskusi Produk</a>
+        <a href="#" class="w3-bar-item w3-button">Ulasan</a>
+        <a href="#" class="w3-bar-item w3-button">Pusat Bantuan</a>
+        <a href="#" class="w3-bar-item w3-button">Komplain Pesanan</a>
+        <a href="#" class="w3-bar-item w3-button">Update</a>
+        PEMBELIAN
+        <a href="#" class="w3-bar-item w3-button">Menunggu Pembayaran</a>
+        <a href="#" class="w3-bar-item w3-button">Daftar Transaksi</a>
+        PROFIL SAYA
+        <a href="#" class="w3-bar-item w3-button">Wishlist</a>
+        <a href="#" class="w3-bar-item w3-button">Toko Favorit</a>
+        <a href="#" class="w3-bar-item w3-button">Pengaturan</a>
+      </div>
+    </div>
+
+    <div class="w3-threequarter">
+
+    </div>
+
+  </div>
+
 </body>
 </html>
