--- a/index.html
+++ b/index.html
@@ -4,32 +4,23 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="content-type" content="text/html; IE-edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<meta name="description" content="Developer IT and Solution IT for Office" />
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<link rel="stylesheet" href="css/style.css">
+	<script type="text/javascript" src="js/admin.js"></script>
+
 	<meta name="author" content="Yudha Prasetya Usman ST"/>
+	<meta name="description" content="Developer IT and Solution IT for Office" />
 
 	<title>CITS | Beranda</title>
-	<link rel="stylesheet" href="css/style.css">
-	<script type="text/javascript" src="js/javascript.js">
-
-	</script>
 </head>
 <body>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/help">Help</a></li>
-        <li><a href="/about">About</a></li>
-    </ul>
+	<div w3-include-html="admin/topnav.html"></div>
 
-	<h1>Cloud IT Solution</h1>
-	<p>
-		Selamat Datang di Web Resmi dari
-	</p>
-
-    <div>
-
-    </div>
+	<div class="w3-blue w3-padding">
     <h3>Sponsored By :</h3>
     <a href="majimecenter.com/index.html">Majime Training Center</a>
-		<button><a href="tokodewi.com/">Toko Dewi</a></button>
+	</div>
+	
+	<script>includeHTML();</script>
 </body>
 </html>
