--- a/admin/topnav.html
+++ b/admin/topnav.html
@@ -1,4 +1,14 @@
-<div class="w3-top w3-black w3-padding w3-bar w3-black">
-  <a href="#">Profile</a>
-  <a href="#" w3-bar-item>Contact: 0800-0800-0800</a>
+<div class="w3-top w3-text-yellow w3-shadow w3-dark-gray w3-bar w3-black">
+  <a class="w3-bar-item w3-hover-text-blue w3-tangerine w3-xxlarge" href="#">Cloud IT Solution</a>
+  <div class="w3-right w3-small w3-padding">
+    <a class="w3-bar-item w3-hover-text-blue" href="#"><i class="material-icons">folder</i> Docs</a>
+    <a class="w3-bar-item w3-hover-text-blue" href="#"><i class="material-icons">group</i> Community</a>
+    <a class="w3-bar-item w3-hover-text-blue" href="#"><i class="material-icons">person</i> Profile</a>
+    <a class="w3-bar-item w3-hover-text-blue" href="#"><i class="material-icons">call</i> 0853-7001-7009</a>
+    <input class="w3-bar-item w3-input w3-round-large" placeholder="Search Key" type="text" name="" value="">
+  </div>
 </div>
+<br>
+<br>
+<br>
+<br>
