--- a/index.html
+++ b/index.html
@@ -5,22 +5,49 @@
 	<meta http-equiv="content-type" content="text/html; IE-edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<link rel="stylesheet" href="/css/master.css">
 	<script type="text/javascript" src="js/admin.js"></script>
 
 	<meta name="author" content="Yudha Prasetya Usman ST"/>
 	<meta name="description" content="Developer IT and Solution IT for Office" />
-
-	<title>CITS | Beranda</title>
+	<title>CITS | Cloud IT Solutions</title>
 </head>
 <body>
 	<div w3-include-html="admin/topnav.html"></div>
 
-	<div class="w3-blue w3-padding">
-    <h3>Sponsored By :</h3>
-    <a href="majimecenter.com/index.html">Majime Training Center</a>
+	<div class="w3-large w3-center">
+		Sangat Mudah Untuk Memulai.
+		<hr>
+
+		Mulai Bergabung Dengan Kami.
+		Jika Kamu Ingin Membuat sebuah Website, Kamu Bisa Segera melakukannya.
+		Dengan Bantuan Dari .
 	</div>
-	
+
+	<div class="w3-row">
+		<div class="w3-half">
+			Apa Yang Kamu Butuhkan?
+
+			<ul>
+				<li>Aplikasi Web</li>
+				<li>Aplikasi untuk database</li>
+				<li>Aplikasi untuk Windows</li>
+				<li>Aplikasi Untuk Android</li>
+				<li>Aplikasi Untuk IOS</li>
+			</ul>
+		</div>
+		<div class="w3-half">
+			Dengan Sangat Senang Hati kami melayani anda?
+		</div>
+	</div>
+
+	<div class="w3-blue w3-padding">
+    <h3>Yang Sudah Bergabung :</h3>
+    <a href="majimecenter.com/index.html"><img src="img/majime.png" width="150px" alt="Majime Training Center"></a>
+	</div>
+
 	<script>includeHTML();</script>
 </body>
 </html>
