--- a/index.html
+++ b/index.html
@@ -17,35 +17,13 @@
 <body>
 	<div w3-include-html="admin/topnav.html"></div>
 
-	<div class="w3-large w3-center">
-		Sangat Mudah Untuk Memulai.
-		<hr>
-
-		Mulai Bergabung Dengan Kami.
-		Jika Kamu Ingin Membuat sebuah Website, Kamu Bisa Segera melakukannya.
-		Dengan Bantuan Dari .
-	</div>
-
 	<div class="w3-row">
-		<div class="w3-half">
-			Apa Yang Kamu Butuhkan?
+		<div class="w3-padding w3-half">
 
-			<ul>
-				<li>Aplikasi Web</li>
-				<li>Aplikasi untuk database</li>
-				<li>Aplikasi untuk Windows</li>
-				<li>Aplikasi Untuk Android</li>
-				<li>Aplikasi Untuk IOS</li>
-			</ul>
 		</div>
-		<div class="w3-half">
-			Dengan Sangat Senang Hati kami melayani anda?
-		</div>
-	</div>
+		<div class="w3-padding w3-half">
 
-	<div class="w3-blue w3-padding">
-    <h3>Yang Sudah Bergabung :</h3>
-    <a href="majimecenter.com/index.html"><img src="img/majime.png" width="150px" alt="Majime Training Center"></a>
+		</div>
 	</div>
 
 	<script>includeHTML();</script>
