--- a/admin/topnav.html
+++ b/admin/topnav.html
@@ -1,8 +1,6 @@
 <div class="w3-top w3-text-yellow w3-shadow w3-dark-gray w3-bar w3-black">
-  <a class="w3-bar-item w3-hover-text-blue w3-tangerine w3-xxlarge" href="https://yudhaprasetya.github.io">Cloud IT Solution</a>
-  <div class="w3-right w3-small w3-padding">
-    <a class="w3-bar-item w3-hover-text-blue" href="#"><i class="material-icons">person</i> Profile</a>
-  </div>
+  <a class="w3-bar-item w3-hover-text-blue" href="https://yudhaprasetya.github.io">Cloud IT Solution</a>
+  <a class="w3-bar-item w3-right w3-hover-text-blue" href="#"><i class="material-icons">person</i> Profile</a>
 </div>
 <br>
 <br>
