--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 	<meta http-equiv="content-type" content="text/html; IE-edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="/css/master.css">
 	<script type="text/javascript" src="js/admin.js"></script>
 
 	<meta name="author" content="Yudha Prasetya Usman ST"/>
 	<meta name="description" content="Developer IT and Solution IT for Office" />
-	<title>CITS | Cloud IT Solutions</title>
+	<title>Yudha Prasetya Usman</title>
 </head>
 <body>
 	<div w3-include-html="admin/topnav.html"></div>
