--- a/index.html
+++ b/index.html
@@ -14,17 +14,9 @@
 	<title>Yudha Prasetya Usman</title>
 </head>
 <body>
-	<div w3-include-html="admin/topnav.html"></div>
-
-	<div class="w3-row">
-		<div class="w3-padding w3-half">
-
-		</div>
-		<div class="w3-padding w3-half">
-
-		</div>
-	</div>
-
+	<h1>Sever Ok!!!</h1>
+<!--	<div w3-include-html="admin/topnav.html"></div>
 	<script>includeHTML();</script>
+-->
 </body>
 </html>
