--- a/bangunan/src/index.html
+++ b/bangunan/src/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
+    <a href="mysql.html">Buka Mysql</a>
   </body>
 </html>
