--- a/bangunan/src/mysql.html
+++ b/bangunan/src/mysql.html
@@ -32,7 +32,7 @@
                     html += row.id;
                     html += '</td>';
                     html += '<td>';
-                    html += row.name;
+                    html += row.nama_bahan;
                     html += '</td>';
                     html += '</tr>';
                     console.log(row);
