--- a/react-gh-pages/public/index.html
+++ b/react-gh-pages/public/index.html
@@ -39,12 +39,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script>
+
+    <!-- <script src="https://www.gstatic.com/firebasejs/6.3.5/firebase-app.js"></script> -->
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#config-web-app -->
 
+<!--
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
@@ -59,5 +62,6 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
+-->
   </body>
 </html>
