--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 	<h1>Sever Ok!!!</h1>
+	<h1>Test Ganti Index...</h1>
 <!--	<div w3-include-html="admin/topnav.html"></div>
 	<script>includeHTML();</script>
 -->
