remove shop engine

--- a/index.html
+++ b/index.html
@@ -4,20 +4,15 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="content-type" content="text/html; IE-edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="/css/master.css">
+	<link rel="stylesheet" href="css/master.css">
 	<script type="text/javascript" src="js/admin.js"></script>
 
-	<meta name="author" content="Yudha Prasetya Usman ST"/>
+	<meta name="author" content="Yudha Prasetya Usman"/>
 	<meta name="description" content="Developer IT and Solution IT for Office" />
 	<title>Yudha Prasetya Usman</title>
 </head>
 <body>
 	<h1>Sever Ok!!!</h1>
 	<h1>Test Ganti Index...</h1>
-<!--	<div w3-include-html="admin/topnav.html"></div>
-	<script>includeHTML();</script>
--->
 </body>
 </html>
