--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<title>Yudha Prasetya Usman</title>
 </head>
 <body>
-	<h1>Sever Ok!!!</h1>
-	<h1>Test Ganti Index...</h1>
+	<h1>List Kontrak Proyek - Greatness Start Here</h1>
 </body>
 </html>
