add folder web ahj

--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 	<script type="text/javascript" src="js/admin.js"></script>
 
 	<meta name="author" content="Yudha Prasetya Usman"/>
-	<meta name="description" content="Developer IT and Solution IT for Office" />
-	<title>Yudha Prasetya Usman</title>
+	<meta name="description" content="Greatness Start Here" />
+	<title>Greatness Start Here</title>
 </head>
 <body>
 	<h1>List Kontrak Proyek - Greatness Start Here</h1>
+	<table>
+		<thead>
+			<tr>
+				<th>No.</th>
+				<th>1</th>
+			</tr>
+		</thead>
+	</table>
 </body>
 </html>
