--- a/index.html
+++ b/index.html
@@ -1,25 +1,65 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8" />
-	<meta http-equiv="content-type" content="text/html; IE-edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" href="css/master.css">
-	<script type="text/javascript" src="js/admin.js"></script>
+<html lang="en">
 
-	<meta name="author" content="Yudha Prasetya Usman"/>
-	<meta name="description" content="Greatness Start Here" />
-	<title>Greatness Start Here</title>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Cloud Hosting & Website - Yudha</title>
+
+	<link rel="stylesheet" href="css/style.css">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+		crossorigin="anonymous"></script>
 </head>
+
 <body>
-	<h1>List Kontrak Proyek - Greatness Start Here</h1>
-	<table>
-		<thead>
-			<tr>
-				<th>No.</th>
-				<th>1</th>
-			</tr>
-		</thead>
-	</table>
+
+	<div class="container text-center">
+		<div class="row justify-content-md-center">
+			<div class="col-md-auto p-2">
+				<h4>Cloud Hosting & Website - Yudha</h4>
+				<form action="" method="post">
+					<button class="btn btn-primary" type="button" data-bs-toggle="collapse"
+						data-bs-target="#collapseLogin" aria-expanded="false" aria-controls="collapseLogin">Klik disini
+						untuk Login</button>
+
+					<div class="collapse p-2" id="collapseLogin">
+						<div class="card card-body">
+							<input class="form-control" type="text" placeholder="login ke akun mu">
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
+
+	<div class="container text-center">
+		<div class="row justify-content-md-center">
+			<div class="col-md-auto p-2">
+				<h4>Silahkan Kontak User untuk Mendaftar Website Anda</h4>
+				<div class="row p-2 card card-body">
+					<div class="col-md-6 p-2">
+						<form action="" method="post">
+							<label class="form-label" for="">Nama Usaha</label>
+							<input class="form-control" type="text" placeholder="Nama Usaha">
+							<label class="form-label" for="">Nama Lengkap Pemilik Usaha</label>
+							<input class="form-control" type="text" placeholder="Nama Lengkap Pemilik">
+							<label class="form-label" for="">Alamat E-Mail Pemilik/Usaha</label>
+							<input class="form-control" type="email" placeholder="Alamat E-Mail">
+					</div>
+					<div class="col-md-6 p-2">
+
+					</div>
+				<button class="btn btn-dark" type="submit">Kirim Request</button>
+						</form>
+				</div>
+			</div>
+
+		</div>
+	</div>
 </body>
+
 </html>
