--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="container text-center">
 		<div class="row justify-content-md-center">
 			<div class="col-md-auto p-2">
-				<h4>Cloud Hosting & Website - Yudha</h4>
+				<h4>Cloud Hosting & Website</h4>
 				<form action="" method="post">
 					<button class="btn btn-primary" type="button" data-bs-toggle="collapse"
 						data-bs-target="#collapseLogin" aria-expanded="false" aria-controls="collapseLogin">Klik disini
@@ -43,18 +43,21 @@
 				<div class="row p-2 card card-body">
 					<div class="col-md-6 p-2">
 						<form action="" method="post">
-							<label class="form-label" for="">Nama Usaha</label>
+							<label class="form-label" for="nm_usaha">Nama Usaha</label>
 							<input class="form-control" type="text" placeholder="Nama Usaha">
-							<label class="form-label" for="">Nama Lengkap Pemilik Usaha</label>
+							<label class="form-label" for="nm_pemilik">Nama Lengkap Pemilik Usaha</label>
 							<input class="form-control" type="text" placeholder="Nama Lengkap Pemilik">
-							<label class="form-label" for="">Alamat E-Mail Pemilik/Usaha</label>
+							<label class="form-label" for="surel">Alamat E-Mail Pemilik/Usaha</label>
 							<input class="form-control" type="email" placeholder="Alamat E-Mail">
-					</div>
-					<div class="col-md-6 p-2">
 
 					</div>
-				<button class="btn btn-dark" type="submit">Kirim Request</button>
-						</form>
+					<div class="col-md-6 p-2">
+						<label class="form-label" for="no_hp">Nomor Kontak HP/WA</label>
+						<input class="form-control" type="text" placeholder="08xxxxxxxxxx">
+
+					</div>
+					<button class="btn btn-dark" type="submit">Kirim Request</button>
+					</form>
 				</div>
 			</div>
 
